[metadata]
# replace with your username:
name = brokers_api
version = 0.0.1
author = Hugo Demenez
author_email = hdemenez@hotmail.fr
description = A package to make requests to brokers like binance,kraken
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugodemenez/Python_Brokers_API
project_urls =
    Bug Tracker = https://github.com/hugodemenez/Python_Brokers_API/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src